--- a/src/assets/scss/config/_variables.scss
+++ b/src/assets/scss/config/_variables.scss
@@ -81,6 +81,7 @@
     --space-hero-title: calc(5 / var(--font-base) * 1rem);
     --space-form-section: calc(52 / var(--font-base) * 1rem) calc(64 / var(--font-base) * 1rem);
     --space-form-group: calc(24 / var(--font-base) * 1rem);
+    --space-link-group: calc(16 / var(--font-base) * 1rem);
     --space-advanced-statistics-section: calc(102 / var(--font-base) * 1rem) 0
       calc(120 / var(--font-base) * 1rem) 0;
     --space-advanced-statistics-group: calc(30 / var(--font-base) * 1rem);
